0.2.10 Added lint and solved code style findings
- And deleted all useless spaces before the end of a line